# task-optim

./: .gitignore  CMakeLists.txt  README.md  comWaypoints.txt  comWaypoints_optimal.txt  comWaypoints_original.txt  notes-reach.md  reaching_comWaypoints_original.txt  rightHandWaypoints.txt  rightHandWaypoints_original.txt  right_hand_targets_set_01.txt
experiments/reaching/: notes.md  reaching_comWaypoints_optimal.txt  (+2 more)
gazebo_plugins/: CMakeLists.txt
gazebo_plugins/apply_wrist_force/: ApplyWristForce.cc  CMakeLists.txt
gazebo_plugins/seat_contact_plugin/: CMakeLists.txt  SeatContactPlugin.cc  SeatContactPlugin.hh
gazebo_plugins/task_optimization_change_color/: CMakeLists.txt  TaskOptimizationChangeColor.cc
gazebo_worlds/: balancing.world  balancing_camera.world  balancing_camera_vert.world  balancing_target_visualization.world  bench.world  bench_camera.world  bench_side_camera.world  bench_side_view_camera.world  yarpmotorgui.ini
misc-scripts/: fix_old_test_runs.py  plot_parameter_test_costs.py
optimization-scripts/: Trajectory.py  bayes_opt.py  class-test.py  cma-test.py  cost_tests-reaching.py  data.py  files.py  first_test.py  iit-controller-optim-rollouts-no-bootstrap.py  iit-controller-optim-rollouts-original-trajectory.py  iit-controller-optim-rollouts-with-bootstrap.py  iit-controller-optim-rollouts.py  iit-controller-optim.py  iit-replay-controller-optim.py  main.py  optim.py  parameter_tests-reach.py  parameter_tests-stand_up.py  parameter_tests.py  rand_right_hand_target_tests.py  reaching.py  reaching_replay.py  replay.py  replay_original_and_optimal.py  robo-test.py  simulate.py  stand_up_test.py  standing.py  standing_metrics.py  standing_with_force.py
plotting-scripts/: cost_test_plots.py  one-com-waypoint-static-plots.py  parameter_test_plots.py  plot-experiment-data.py  plot-test.py
python-package-tests/: gpy-test.py  robo-test.py  sklearn_gpy-test.py  testTraj.py
reach-client/: CMakeLists.txt
reach-client/src/: main.cpp  (+1 more)
stand-client/: CMakeLists.txt  com_waypoints.txt
video-scripts/: combine_reaching_videos.py
(+3979 files in other folders)
